welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
    def hunt(c:Color) 
    {
	
       
    }
   
   def isFacingTrail():Boolean =
{

	if(estFaceMur)
	{
	return false
	}

		else
		{
			avance()
			if(getCouleurSol()==c)
			{
				recule()
				return true
				
			}
				else
				{
				recule()
				return false
				}
		}
		
}
 

